@@ -1,3 +1,11 @@
+2009-03-01  Keith Marshall  <keithmarshall@users.sourceforge.net>
+
+	Locate script components in `$CURDIR' implicitly.
+
+	* x86-mingw32-build.sh (CURDIR): Append to...
+	(PATH): ...this, avoiding need for explicit path specification by
+	user, so allowing invocation as described in `README'.
+
 2009-02-26  Keith Marshall  <keithmarshall@users.sourceforge.net>
 
 	Improve efficiency of GCC build; add more comments.
